<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.LoginActivity">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:paddingTop="75dp"
                android:text="@string/hello"
                android:textColor="@color/primary_red"
                android:textSize="64sp"
                app:layout_constraintBottom_toTopOf="@+id/tvHeader1"
                app:layout_constraintStart_toStartOf="@+id/tvNameTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/tvHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/please_login"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@+id/tvHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

            <TextView
                android:id="@+id/tvNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader1"
                app:layout_constraintVertical_bias="0.100000024" />

            <com.example.storyappsubmission.ui.customview.EmailEditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="emailAddress"
                android:ems="15"
                android:fontFamily="@font/source_sans_pro"
                android:hint="@string/masukkan_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameTitle" />

            <com.example.storyappsubmission.ui.customview.MyEditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="15"
                android:fontFamily="@font/source_sans_pro"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordTitle" />

            <TextView
                android:id="@+id/tvPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <Button
                android:id="@+id/button"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:clickable="true"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/primary_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvBelum"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/tvBelum"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:gravity="center"
                android:text="@string/belum_punya_akun"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvRegister"
                app:layout_constraintEnd_toStartOf="@+id/tvRegister"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorSize="100dp"
        app:trackCornerRadius="5dp"
        app:trackThickness="3dp" />

</RelativeLayout>